--- a/UniTester/chemicalElementsNames/la_la.lang
+++ b/UniTester/chemicalElementsNames/la_la.lang
@@ -1,110 +1,126 @@
-'Hydrogenium': 'Hydrogenium'
-'Helium': 'Helium'
-'Lithium': 'Lithium'
-'Beryllium': 'Beryllium'
-'Borum': 'Borum'
-'Carboneum': 'Carboneum'
-'Nitrogenium': 'Nitrogenium'
-'Oxygenium': 'Oxygenium'
-'Fluorum': 'Fluorum'
-'Neon': 'Neon'
-'Natrium': 'Natrium'
-'Magnesium': 'Magnesium'
-'Aluminium': 'Aluminium'
-'Silicium': 'Silicium'
-'Phosphorus': 'Phosphorus'
-'Sulfur': 'Sulfur'
-'Chlorum': 'Chlorum'
-'Argon': 'Argon'
-'Kalium': 'Kalium'
-'Calcium': 'Calcium'
-'Scandium': 'Scandium'
-'Titanium': 'Titanium'
-'Vanadium': 'Vanadium'
-'Chromium': 'Chromium'
-'Manganum': 'Manganum'
-'Ferrum': 'Ferrum'
-'Cobaltum': 'Cobaltum'
-'Niccolum': 'Niccolum'
-'Cuprum': 'Cuprum'
-'Zincum': 'Zincum'
-'Gallium': 'Gallium'
-'Germanium': 'Germanium'
-'Arsenicum': 'Arsenicum'
-'Selenium': 'Selenium'
-'Bromum': 'Bromum'
-'Krypton': 'Krypton'
-'Rubidium': 'Rubidium'
-'Strontium': 'Strontium'
-'Yttrium': 'Yttrium'
-'Zirconium': 'Zirconium'
-'Niobium': 'Niobium'
-'Molybdaenum': 'Molybdaenum'
-'Technetium': 'Technetium'
-'Ruthenium': 'Ruthenium'
-'Rhodium': 'Rhodium'
-'Palladium': 'Palladium'
-'Argentum': 'Argentum'
-'Cadmium': 'Cadmium'
-'Indium': 'Indium'
-'Stannum': 'Stannum'
-'Stibium': 'Stibium'
-'Tellurium': 'Tellurium'
-'Jodum': 'Jodum'
-'Xenon': 'Xenon'
-'Caesium': 'Caesium'
-'Barium': 'Barium'
-'Lanthanum': 'Lanthanum'
-'Cerium': 'Cerium'
-'Praseodymium': 'Praseodymium'
-'Neodymium': 'Neodymium'
-'Promethium': 'Promethium'
-'Samarium': 'Samarium'
-'Europium': 'Europium'
-'Gadolinium': 'Gadolinium'
-'Terbium': 'Terbium'
-'Dysprosium': 'Dysprosium'
-'Holmium': 'Holmium'
-'Erbium': 'Erbium'
-'Thulium': 'Thulium'
-'Ytterbium': 'Ytterbium'
-'Lutetium': 'Lutetium'
-'Hafnium': 'Hafnium'
-'Tantalum': 'Tantalum'
-'Wolfram': 'Wolfram'
-'Rhenium': 'Rhenium'
-'Osmium': 'Osmium'
-'Iridium': 'Iridium'
-'Platinum': 'Platinum'
-'Aurum': 'Aurum'
-'Hydrargyrum': 'Hydrargyrum'
-'Thallium': 'Thallium'
-'Plumbum': 'Plumbum'
-'Bismuthum': 'Bismuthum'
-'Polonium': 'Polonium'
-'Astatium': 'Astatium'
-'Radon': 'Radon'
-'Francium': 'Francium'
-'Radium': 'Radium'
-'Actinium': 'Actinium'
-'Thorium': 'Thorium'
-'Protactinium': 'Protactinium'
-'Uranium': 'Uranium'
-'Neptunium': 'Neptunium'
-'Plutonium': 'Plutonium'
-'Americium': 'Americium'
-'Curium': 'Curium'
-'Berkelium': 'Berkelium'
-'Californium': 'Californium'
-'Einsteinium': 'Einsteinium'
-'Fermium': 'Fermium'
-'Mendelevium': 'Mendelevium'
-'Nobelium': 'Nobelium'
-'Lawrencium': 'Lawrencium'
-'Rutherfordium': 'Rutherfordium'
-'Dubnium': 'Dubnium'
-'Seaborgium': 'Seaborgium'
-'Bohrium': 'Bohrium'
-'Hassium': 'Hassium'
-'Meitnerium': 'Meitnerium'
-'Darmstadtium': 'Darmstadtium'
+'H': 	'Hydrogenium'
+'He': 	'Helium'
+'Li': 	'Lithium'
+'Be': 	'Beryllium'
+'B': 	'Borum'
+'C': 	'Carboneum'
+'N': 	'Nitrogenium'
+'O': 	'Oxygenium'
+'F': 	'Fluorum'
+'Ne': 	'Neon'
+'Na': 	'Natrium'
+'Mg': 	'Magnesium'
+'Al': 	'Aluminium'
+'Si': 	'Silicium'
+'P': 	'Phosphorus'
+'S': 	'Sulfur'
+'Cl': 	'Chlorum'
+'Ar': 	'Argon'
+'K': 	'Kalium'
+'Ca': 	'Calcium'
+'Sc': 	'Scandium'
+'Ti': 	'Titanium'
+'V': 	'Vanadium'
+'Cr': 	'Chromium'
+'Mn': 	'Manganum'
+'Fe': 	'Ferrum'
+'Co': 	'Cobaltum'
+'Ni': 	'Niccolum'
+'Cu': 	'Cuprum'
+'Zn': 	'Zincum'
+'Ga': 	'Gallium'
+'Ge': 	'Germanium'
+'As': 	'Arsenicum'
+'Se': 	'Selenium'
+'Br': 	'Bromum'
+'Kr': 	'Krypton'
+'Rb': 	'Rubidium'
+'Sr': 	'Strontium'
+'Y': 	'Yttrium'
+'Zr': 	'Zirconium'
+'Nb': 	'Niobium'
+'Mo': 	'Molybdaenum'
+'Tc': 	'Technetium'
+'Ru': 	'Ruthenium'
+'Rh': 	'Rhodium'
+'Pd': 	'Palladium'
+'Ag': 	'Argentum'
+'Cd': 	'Cadmium'
+'In': 	'Indium'
+'Sn': 	'Stannum'
+'Sb': 	'Stibium'
+'Te': 	'Tellurium'
+'I': 	'Jodum'
+'Xe': 	'Xenon'
+'Cs': 	'Caesium'
+'Ba': 	'Barium'
+'La': 	'Lanthanum'
+'Ce': 	'Cerium'
+'Pr': 	'Praseodymium'
+'Nd': 	'Neodymium'
+'Pm': 	'Promethium'
+'Sm': 	'Samarium'
+'Eu': 	'Europium'
+'Gd': 	'Gadolinium'
+'Tb': 	'Terbium'
+'Dy': 	'Dysprosium'
+'Ho': 	'Holmium'
+'Er': 	'Erbium'
+'Tm': 	'Thulium'
+'Yb': 	'Ytterbium'
+'Lu': 	'Lutetium'
+'Hf': 	'Hafnium'
+'Ta': 	'Tantalum'
+'W': 	'Wolfram'
+'Re': 	'Rhenium'
+'Os': 	'Osmium'
+'Ir': 	'Iridium'
+'Pt': 	'Platinum'
+'Au': 	'Aurum'
+'Hg': 	'Hydrargyrum'
+'Tl': 	'Thallium'
+'Pb': 	'Plumbum'
+'Bi': 	'Bismuthum'
+'Po': 	'Polonium'
+'At': 	'Astatium'
+'Rn': 	'Radon'
+'Fr': 	'Francium'
+'Ra': 	'Radium'
+'Ac': 	'Actinium'
+'Th': 	'Thorium'
+'Pa': 	'Protactinium'
+'U': 	'Uranium'
+'Np': 	'Neptunium'
+'Pu': 	'Plutonium'
+'Am': 	'Americium'
+'Cm': 	'Curium'
+'Bk': 	'Berkelium'
+'Cf': 	'Californium'
+'Es': 	'Einsteinium'
+'Fm': 	'Fermium'
+'Md': 	'Mendelevium'
+'No': 	'Nobelium'
+'Lr': 	'Lawrencium'
+'Rf': 	'Rutherfordium'
+'Db': 	'Dubnium'
+'Sg': 	'Seaborgium'
+'Bh': 	'Bohrium'
+'Hs': 	'Hassium'
+'Mt': 	'Meitnerium'
+'Ds': 	'Darmstadtium'
+'Rg': 	'Roentgenium'
+'Cn': 	'Copernecium'
+'Nh': 	'Nihonium'
+'Fl': 	'Flerovium'
+'Mc': 	'Moscovium'
+'Lv': 	'Livermorium'
+'Ts': 	'Tennessine'
+'Og': 	'Oganneson'
+'Uue': 	'Ununennium'
+'Ubn': 	'Unbinilium'
+'Ubu': 	'Unbiunium'
+'Ubb': 	'Unbibium'
+'Ubt': 	'Unbitrium'
+'Ubq': 	'Unbiquadium'
+'Ubp': 	'Unbipentium'
+'Ubh': 	'Unbihexium'
