--- a/UniTester/chemicalElementsNames/ru_ru.lang
+++ b/UniTester/chemicalElementsNames/ru_ru.lang
@@ -1,110 +1,126 @@
-'Hydrogenium': 'Водород'
-'Helium': 'Гелий'
-'Lithium': 'Литий'
-'Beryllium': 'Бериллий'
-'Borum': 'Бор'
-'Carboneum': 'Углерод'
-'Nitrogenium': 'Азот'
-'Oxygenium': 'Кислород'
-'Fluorum': 'Фтор'
-'Neon': 'Неон'
-'Natrium': 'Натрий'
-'Magnesium': 'Магний'
-'Aluminium': 'Алюминий'
-'Silicium': 'Кремний'
-'Phosphorus': 'Фосфор'
-'Sulfur': 'Сера'
-'Chlorum': 'Хлор'
-'Argon': 'Аргон'
-'Kalium': 'Калий'
-'Calcium': 'Кальций'
-'Scandium': 'Скандий'
-'Titanium': 'Титан'
-'Vanadium': 'Ванадий'
-'Chromium': 'Хром'
-'Manganum': 'Марганец'
-'Ferrum': 'Железо'
-'Cobaltum': 'Кобальт'
-'Niccolum': 'Никель'
-'Cuprum': 'Медь'
-'Zincum': 'Цинк'
-'Gallium': 'Галлий'
-'Germanium': 'Германий'
-'Arsenicum': 'Мышьяк'
-'Selenium': 'Селен'
-'Bromum': 'Бром'
-'Krypton': 'Криптон'
-'Rubidium': 'Рубидий'
-'Strontium': 'Стронций'
-'Yttrium': 'Иттрий'
-'Zirconium': 'Цирконий'
-'Niobium': 'Ниобий'
-'Molybdaenum': 'Молибден'
-'Technetium': 'Технеций'
-'Ruthenium': 'Рутений'
-'Rhodium': 'Родий'
-'Palladium': 'Палладий'
-'Argentum': 'Серебро'
-'Cadmium': 'Кадмий'
-'Indium': 'Индий'
-'Stannum': 'Олово'
-'Stibium': 'Сурьма'
-'Tellurium': 'Теллур'
-'Jodum': 'Иод'
-'Xenon': 'Ксенон'
-'Caesium': 'Цезий'
-'Barium': 'Барий'
-'Lanthanum': 'Лантан'
-'Cerium': 'Церий'
-'Praseodymium': 'Празеодим'
-'Neodymium': 'Неодим'
-'Promethium': 'Прометий'
-'Samarium': 'Самарий'
-'Europium': 'Европий'
-'Gadolinium': 'Гадолиний'
-'Terbium': 'Тербий'
-'Dysprosium': 'Диспрозий'
-'Holmium': 'Гольмий'
-'Erbium': 'Эрбий'
-'Thulium': 'Тулий'
-'Ytterbium': 'Иттербий'
-'Lutetium': 'Лютеций'
-'Hafnium': 'Гафний'
-'Tantalum': 'Тантал'
-'Wolfram': 'Вольфрам'
-'Rhenium': 'Рений'
-'Osmium': 'Осмий'
-'Iridium': 'Иридий'
-'Platinum': 'Платина'
-'Aurum': 'Золото'
-'Hydrargyrum': 'Ртуть'
-'Thallium': 'Таллий'
-'Plumbum': 'Свинец'
-'Bismuthum': 'Висмут'
-'Polonium': 'Полоний'
-'Astatium': 'Астат'
-'Radon': 'Радон'
-'Francium': 'Франций'
-'Radium': 'Радий'
-'Actinium': 'Актиний'
-'Thorium': 'Торий'
-'Protactinium': 'Протактиний'
-'Uranium': 'Уран'
-'Neptunium': 'Нептуний'
-'Plutonium': 'Плутоний'
-'Americium': 'Америций'
-'Curium': 'Кюрий'
-'Berkelium': 'Берклий'
-'Californium': 'Калифорний'
-'Einsteinium': 'Эйнштейний'
-'Fermium': 'Фермий'
-'Mendelevium': 'Менделевий'
-'Nobelium': 'Нобелий'
-'Lawrencium': 'Лоуренсий'
-'Rutherfordium': 'Резерфордий'
-'Dubnium': 'Дубний'
-'Seaborgium': 'Сиборгий'
-'Bohrium': 'Борий'
-'Hassium': 'Хассий'
-'Meitnerium': 'Мейтнерий'
-'Darmstadtium': 'Дармштадтий'
+'H': 	'Водород'
+'He': 	'Гелий'
+'Li': 	'Литий'
+'Be': 	'Бериллий'
+'B': 	'Бор'
+'C': 	'Углерод'
+'N': 	'Азот'
+'O': 	'Кислород'
+'F': 	'Фтор'
+'Ne': 	'Неон'
+'Na': 	'Натрий'
+'Mg': 	'Магний'
+'Al': 	'Алюминий'
+'Si': 	'Кремний'
+'P': 	'Фосфор'
+'S': 	'Сера'
+'Cl': 	'Хлор'
+'Ar': 	'Аргон'
+'K': 	'Калий'
+'Ca': 	'Кальций'
+'Sc': 	'Скандий'
+'Ti': 	'Титан'
+'V': 	'Ванадий'
+'Cr': 	'Хром'
+'Mn': 	'Марганец'
+'Fe': 	'Железо'
+'Co': 	'Кобальт'
+'Ni': 	'Никель'
+'Cu': 	'Медь'
+'Zn': 	'Цинк'
+'Ga': 	'Галлий'
+'Ge': 	'Германий'
+'As': 	'Мышьяк'
+'Se': 	'Селен'
+'Br': 	'Бром'
+'Kr': 	'Криптон'
+'Rb': 	'Рубидий'
+'Sr': 	'Стронций'
+'Y': 	'Иттрий'
+'Zr': 	'Цирконий'
+'Nb': 	'Ниобий'
+'Mo': 	'Молибден'
+'Tc': 	'Технеций'
+'Ru': 	'Рутений'
+'Rh': 	'Родий'
+'Pd': 	'Палладий'
+'Ag': 	'Серебро'
+'Cd': 	'Кадмий'
+'In': 	'Индий'
+'Sn': 	'Олово'
+'Sb': 	'Сурьма'
+'Te': 	'Теллур'
+'I': 	'Иод'
+'Xe': 	'Ксенон'
+'Cs': 	'Цезий'
+'Ba': 	'Барий'
+'La': 	'Лантан'
+'Ce': 	'Церий'
+'Pr': 	'Празеодим'
+'Nd': 	'Неодим'
+'Pm': 	'Прометий'
+'Sm': 	'Самарий'
+'Eu': 	'Европий'
+'Gd': 	'Гадолиний'
+'Tb': 	'Тербий'
+'Dy': 	'Диспрозий'
+'Ho': 	'Гольмий'
+'Er': 	'Эрбий'
+'Tm': 	'Тулий'
+'Yb': 	'Иттербий'
+'Lu': 	'Лютеций'
+'Hf': 	'Гафний'
+'Ta': 	'Тантал'
+'W': 	'Вольфрам'
+'Re': 	'Рений'
+'Os': 	'Осмий'
+'Ir': 	'Иридий'
+'Pt': 	'Платина'
+'Au': 	'Золото'
+'Hg': 	'Ртуть'
+'Tl': 	'Таллий'
+'Pb': 	'Свинец'
+'Bi': 	'Висмут'
+'Po': 	'Полоний'
+'At': 	'Астат'
+'Rn': 	'Радон'
+'Fr': 	'Франций'
+'Ra': 	'Радий'
+'Ac': 	'Актиний'
+'Th': 	'Торий'
+'Pa': 	'Протактиний'
+'U': 	'Уран'
+'Np': 	'Нептуний'
+'Pu': 	'Плутоний'
+'Am': 	'Америций'
+'Cm': 	'Кюрий'
+'Bk': 	'Берклий'
+'Cf': 	'Калифорний'
+'Es': 	'Эйнштейний'
+'Fm': 	'Фермий'
+'Md': 	'Менделевий'
+'No': 	'Нобелий'
+'Lr': 	'Лоуренсий'
+'Rf': 	'Резерфордий'
+'Db': 	'Дубний'
+'Sg': 	'Сиборгий'
+'Bh': 	'Борий'
+'Hs': 	'Хассий'
+'Mt': 	'Мейтнерий'
+'Ds': 	'Дармштадтий'
+'Rg': 	'Рентгений'
+'Cn': 	'Копернеций'
+'Nh': 	'Нихоний'
+'Fl': 	'Флеровий'
+'Mc': 	'Московий'
+'Lv': 	'Ливерморий'
+'Ts': 	'Теннессин'
+'Og': 	'Оганесон'
+'Uue': 	'Унуненний'
+'Ubn': 	'Унбинилий'
+'Ubu': 	'Унбиуний'
+'Ubb': 	'Унбибий'
+'Ubt': 	'Унбитрий'
+'Ubq': 	'Унбиквадий'
+'Ubp': 	'Унбипенсий'
+'Ubh': 	'Унбигексий'
