--- a/UniTester/chemicalElementsNames/en_uk.lang
+++ b/UniTester/chemicalElementsNames/en_uk.lang
@@ -1,110 +1,126 @@
-'Hydrogenium': 'Hydrogen'
-'Helium': 'Helium'
-'Lithium': 'Lithium'
-'Beryllium': 'Beryllium'
-'Borum': 'Boron'
-'Carboneum': 'Carbon'
-'Nitrogenium': 'Nitrogen'
-'Oxygenium': 'Oxygen'
-'Fluorum': 'Fluorine'
-'Neon': 'Neon'
-'Natrium': 'Sodium'
-'Magnesium': 'Magnesium'
-'Aluminium': 'Aluminum'
-'Silicium': 'Silicon'
-'Phosphorus': 'Phosphorus'
-'Sulfur': 'Sulfur'
-'Chlorum': 'Chlorine'
-'Argon': 'Argon'
-'Kalium': 'Potassium'
-'Calcium': 'Calcium'
-'Scandium': 'Scandium'
-'Titanium': 'Titanium'
-'Vanadium': 'Vanadium'
-'Chromium': 'Chromium'
-'Manganum': 'Manganese'
-'Ferrum': 'Iron'
-'Cobaltum': 'Cobalt'
-'Niccolum': 'Nickel'
-'Cuprum': 'Copper'
-'Zincum': 'Zinc'
-'Gallium': 'Gallium'
-'Germanium': 'Germanium'
-'Arsenicum': 'Arsenic'
-'Selenium': 'Selenium'
-'Bromum': 'Bromine'
-'Krypton': 'Krypton'
-'Rubidium': 'Rubidium'
-'Strontium': 'Strontium'
-'Yttrium': 'Yttrium'
-'Zirconium': 'Zirconium'
-'Niobium': 'Niobium'
-'Molybdaenum': 'Molybdenum'
-'Technetium': 'Technetium'
-'Ruthenium': 'Ruthenium'
-'Rhodium': 'Rhodium'
-'Palladium': 'Palladium'
-'Argentum': 'Silver'
-'Cadmium': 'Cadmium'
-'Indium': 'Indium'
-'Stannum': 'Tin'
-'Stibium': 'Antimony'
-'Tellurium': 'Tellurium'
-'Jodum': 'Iodine'
-'Xenon': 'Xenon'
-'Caesium': 'Cesium'
-'Barium': 'Barium'
-'Lanthanum': 'Lanthanum'
-'Cerium': 'Cerium'
-'Praseodymium': 'Praseodymium'
-'Neodymium': 'Neodymium'
-'Promethium': 'Promethium'
-'Samarium': 'Samarium'
-'Europium': 'Europium'
-'Gadolinium': 'Gadolinium'
-'Terbium': 'Terbium'
-'Dysprosium': 'Dysprosium'
-'Holmium': 'Holmium'
-'Erbium': 'Erbium'
-'Thulium': 'Thulium'
-'Ytterbium': 'Ytterbium'
-'Lutetium': 'Lutetium'
-'Hafnium': 'Hafnium'
-'Tantalum': 'Tantalum'
-'Wolfram': 'Tungsten'
-'Rhenium': 'Rhenium'
-'Osmium': 'Osmium'
-'Iridium': 'Iridium'
-'Platinum': 'Platinum'
-'Aurum': 'Gold'
-'Hydrargyrum': 'Mercury'
-'Thallium': 'Thallium'
-'Plumbum': 'Lead'
-'Bismuthum': 'Bismuth'
-'Polonium': 'Polonium'
-'Astatium': 'Astatine'
-'Radon': 'Radon'
-'Francium': 'Francium'
-'Radium': 'Radium'
-'Actinium': 'Actinium'
-'Thorium': 'Thorium'
-'Protactinium': 'Protactinium'
-'Uranium': 'Uranium'
-'Neptunium': 'Neptunium'
-'Plutonium': 'Plutonium'
-'Americium': 'Americium'
-'Curium': 'Curium'
-'Berkelium': 'Berkelium'
-'Californium': 'Californium'
-'Einsteinium': 'Einsteinium'
-'Fermium': 'Fermium'
-'Mendelevium': 'Mendelevium'
-'Nobelium': 'Nobelium'
-'Lawrencium': 'Lawrencium'
-'Rutherfordium': 'Rutherfordium'
-'Dubnium': 'Dubnium'
-'Seaborgium': 'Seaborgium'
-'Bohrium': 'Bohrium'
-'Hassium': 'Hassium'
-'Meitnerium': 'Meitnerium'
-'Darmstadtium': 'Darmstadtium'
+'H': 	'Hydrogen'
+'He': 	'Helium'
+'Li': 	'Lithium'
+'Be': 	'Beryllium'
+'B': 	'Boron'
+'C': 	'Carbon'
+'N': 	'Nitrogen'
+'O': 	'Oxygen'
+'F': 	'Fluorine'
+'Ne': 	'Neon'
+'Na': 	'Sodium'
+'Mg': 	'Magnesium'
+'Al': 	'Aluminum'
+'Si': 	'Silicon'
+'P': 	'Phosphorus'
+'S': 	'Sulfur'
+'Cl': 	'Chlorine'
+'Ar': 	'Argon'
+'K': 	'Potassium'
+'Ca': 	'Calcium'
+'Sc': 	'Scandium'
+'Ti': 	'Titanium'
+'V': 	'Vanadium'
+'Cr': 	'Chromium'
+'Mn': 	'Manganese'
+'Fe': 	'Iron'
+'Co': 	'Cobalt'
+'Ni': 	'Nickel'
+'Cu': 	'Copper'
+'Zn': 	'Zinc'
+'Ga': 	'Gallium'
+'Ge': 	'Germanium'
+'As': 	'Arsenic'
+'Se': 	'Selenium'
+'Br': 	'Bromine'
+'Kr': 	'Krypton'
+'Rb': 	'Rubidium'
+'Sr': 	'Strontium'
+'Y': 	'Yttrium'
+'Zr': 	'Zirconium'
+'Nb': 	'Niobium'
+'Mo': 	'Molybdenum'
+'Tc': 	'Technetium'
+'Ru': 	'Ruthenium'
+'Rh': 	'Rhodium'
+'Pd': 	'Palladium'
+'Ag': 	'Silver'
+'Cd': 	'Cadmium'
+'In': 	'Indium'
+'Sn': 	'Tin'
+'Sb': 	'Antimony'
+'Te': 	'Tellurium'
+'I': 	'Iodine'
+'Xe': 	'Xenon'
+'Cs': 	'Cesium'
+'Ba': 	'Barium'
+'La': 	'Lanthanum'
+'Ce': 	'Cerium'
+'Pr': 	'Praseodymium'
+'Nd': 	'Neodymium'
+'Pm': 	'Promethium'
+'Sm': 	'Samarium'
+'Eu': 	'Europium'
+'Gd': 	'Gadolinium'
+'Tb': 	'Terbium'
+'Dy': 	'Dysprosium'
+'Ho': 	'Holmium'
+'Er': 	'Erbium'
+'Tm': 	'Thulium'
+'Yb': 	'Ytterbium'
+'Lu': 	'Lutetium'
+'Hf': 	'Hafnium'
+'Ta': 	'Tantalum'
+'W': 	'Tungsten'
+'Re': 	'Rhenium'
+'Os': 	'Osmium'
+'Ir': 	'Iridium'
+'Pt': 	'Platinum'
+'Au': 	'Gold'
+'Hg': 	'Mercury'
+'Tl': 	'Thallium'
+'Pb': 	'Lead'
+'Bi': 	'Bismuth'
+'Po': 	'Polonium'
+'At': 	'Astatine'
+'Rn': 	'Radon'
+'Fr': 	'Francium'
+'Ra': 	'Radium'
+'Ac': 	'Actinium'
+'Th': 	'Thorium'
+'Pa': 	'Protactinium'
+'U': 	'Uranium'
+'Np': 	'Neptunium'
+'Pu': 	'Plutonium'
+'Am': 	'Americium'
+'Cm': 	'Curium'
+'Bk': 	'Berkelium'
+'Cf': 	'Californium'
+'Es': 	'Einsteinium'
+'Fm': 	'Fermium'
+'Md': 	'Mendelevium'
+'No': 	'Nobelium'
+'Lr': 	'Lawrencium'
+'Rf': 	'Rutherfordium'
+'Db': 	'Dubnium'
+'Sg': 	'Seaborgium'
+'Bh': 	'Bohrium'
+'Hs': 	'Hassium'
+'Mt': 	'Meitnerium'
+'Ds': 	'Darmstadtium'
+'Rg': 	'Roentgenium'
+'Cn': 	'Copernicium'
+'Nh': 	'Nihonium'
+'Fl': 	'Flerovium'
+'Mc': 	'Moscovium'
+'Lv': 	'Livermorium'
+'Ts': 	'Tennessine'
+'Og': 	'Oganneson'
+'Uue': 	'Ununennium'
+'Ubn': 	'Unbinilium'
+'Ubu': 	'Unbiunium'
+'Ubb': 	'Unbibium'
+'Ubt': 	'Unbitrium'
+'Ubq': 	'Unbiquadium'
+'Ubp': 	'Unbipentium'
+'Ubh': 	'Unbihexium'
