--- a/UniTester/public/messages/ru_ru.lang
+++ b/UniTester/public/messages/ru_ru.lang
@@ -129,6 +129,8 @@
 'atoms': 'атом(а,ов)'
 
 
-
+'info_definition': 'UniTester - интернет-портал, который предоставляет доступ к инструментам для тестирования на знания, обучения и проверки.'
+'info_tests': 'Учителя могут создавать свои тесты, использовать тесты опубликованные другими пользователями, тестировать по тестам учеников, после чего посмотреть результаты и получить статистику.'
+'info_opportunities': 'На портале можно использовать дополнительные инструменты, например: переодическая таблица химических элементов, генератор описаний химических формул'
 
 
